--- a/.github/workflows/pull-translations.yml
+++ b/.github/workflows/pull-translations.yml
@@ -24,35 +24,51 @@ jobs:
 
       - name: Clean and Re-initialize Submodule to Latest Remote State
         run: |
-          # The submodule path 'public/locales' is used directly in the commands.
-          # The submodule URL is automatically handled by 'git submodule' commands
-          # by reading it from your .gitmodules file.
+          # Dynamically extract the submodule path from .gitmodules.
+          # This assumes there's one primary submodule whose path you want to update.
+          # It finds the line like 'path = public/locales' and extracts 'public/locales'.
+          SUBMODULE_PATH=$(git config --file .gitmodules --get-regexp '^submodule\..*\.path$' | awk '{print $2}')
+
+          if [ -z "$SUBMODULE_PATH" ]; then
+            echo "Error: Could not find submodule path in .gitmodules. Please ensure your .gitmodules file is correctly configured."
+            exit 1
+          fi
+
+          echo "Dynamically determined submodule path: ${SUBMODULE_PATH}"
 
           echo "Ensuring .gitmodules has the correct entry (should be from initial checkout)."
-          cat .gitmodules # Good for debugging/verification in logs
+          cat .gitmodules
 
           echo "Attempting to deinitialize and remove existing submodule directory to ensure a clean state..."
-          git submodule deinit -f "public/locales" || true # Using the path directly
-          rm -rf "public/locales" # Using the path directly
+          git submodule deinit -f "${SUBMODULE_PATH}" || true # Use the extracted path
+          rm -rf "${SUBMODULE_PATH}" # Use the extracted path
 
           echo "Synchronizing submodule configuration (ensures correct URL is used)..."
           git submodule sync # This command processes all submodules based on .gitmodules
 
           echo "Updating/Initializing submodule to the latest remote commit..."
-          git submodule update --init --remote --force "public/locales" # Using the path directly
+          git submodule update --init --remote --force "${SUBMODULE_PATH}" # Use the extracted path
 
-          # Optional: You can still verify the URL if you wish, but it's not essential for the command itself.
-          # The 'git submodule' commands will use the URL from .gitmodules.
+          # Optional: Verify the submodule URL (the 'git submodule' commands already use it internally)
           # echo "Verifying the submodule URL after re-init..."
-          # git config --get submodule.public.locales.url || echo "Submodule URL not found in Git config."
+          # git config --get submodule.${SUBMODULE_PATH//\//.}.url || echo "Submodule URL not found in Git config."
 
       - name: Stage and Commit Submodule Changes to Main Repo
         run: |
-          if git diff --exit-code public/locales; then
+          # Re-extract SUBMODULE_PATH for this separate 'run' block, as shell variables
+          # are scoped to their respective 'run' commands.
+          SUBMODULE_PATH=$(git config --file .gitmodules --get-regexp '^submodule\..*\.path$' | awk '{print $2}')
+
+          if [ -z "$SUBMODULE_PATH" ]; then
+            echo "Error: Could not find submodule path in .gitmodules for commit step."
+            exit 1
+          fi
+
+          if git diff --exit-code "${SUBMODULE_PATH}"; then
             echo "No changes detected in the submodule commit hash. Skipping commit."
           else
             echo "Changes detected in the submodule commit hash. Staging and committing..."
-            git add public/locales
+            git add "${SUBMODULE_PATH}" # Use the extracted path
             git commit -m "🔁 Update translations from Weblate"
             git push
           fi
