--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "public/locales"]
-	path = public/locales
-	url = https://github.com/gediminasurvila/react-weblate-i18n.git
+[submodule "public"]
+    path = public
+    url = https://github.com/gediminasurvila/react-weblate-i18n.git
