--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "public/translations"]  # New name for the submodule
-    path = public/translations      # New path for the submodule
-    url = https://github.com/gediminasurvila/react-weblate-i18n.git
+	path = public/translations
+	url = https://github.com/gediminasurvila/react-weblate-i18n.git
