--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "sync-translations": "scripts/sync-translations.sh",
+    "extract-translations": "i18next 'src/**/*.{js,jsx,ts,tsx}' --config i18next-parser.config.cjs",
     "prepare": "husky"
   },
   "dependencies": {
@@ -29,6 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
+    "i18next-parser": "^9.3.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
