--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
+      - name: Update Translations
+        run: npm run sync-translations
+
       - name: Build React App
         run: npm run build
 
